crates/plotnik-lib/tests/03-analyze/direct_recursion/no_input_left_recursion.txt
E = [
  (E)
  (x)
]
==== diagnostics ====
error: infinite recursion: cycle consumes no input
 --> query.ptk:2:4
  |
2 |   (E)
  |    ^
  |    |
  |    references itself
  |
help: recursive references must consume input before recursing
==== symbols ====
E
  E (cycle)
